[project]
name = "shield-orchestrator"
version = "0.1.0"
description = "Multi-Agent Security Orchestration Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

